fix: remove scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -21,3 +21,7 @@
 .ProseMirror-focused {
   outline: none;
 }
+
+*::-webkit-scrollbar {
+  display: none;
+}
